[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development", "rendering", "graphics"]
description = "Asset loader plugin for Bevy that adds support for lospec color palettes"
edition = "2021"
keywords = ["gamedev", "bevy", "palette"]
license = "MIT OR Apache-2.0"
name = "bevy_lospec"
repository = "https://github.com/johanhelsing/bevy_lospec"
version = "0.7.0"

[dependencies]
thiserror = "1.0"
bevy = { version = "0.13", default-features = false, features = [
    "bevy_render", # for Color
    "bevy_asset"
] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_sprite",
    "bevy_winit",
    "x11",
    "webgl2" # we don't want webgpu
] }
